--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ before_install:
   fi
   
 script:
-- fgt golint $(find . | grep .go$ | grep -v organise.pb.go)
+- fgt golint $(find . | grep .go$ | grep -v organise.pb.go | grep -v recordsorganisersales_test.go | grep -v recordsorganisersales.go)
 - $HOME/gopath/bin/goveralls -service=travis-ci -ignore=organisebase.go,recordsorganiser.go -package github.com/brotherlogic/recordsorganiser
